# rust-yew-subgraph-app

./: Cargo.toml  README.md  index.html  schema.json
src/: app.rs  inline-scss.scss  main.rs
src/components/: data_table.rs  indexers_table.rs  mod.rs
src/queries/: indexer_latencies.graphql  indexers.graphql  latencies.graphql  queries.rs
src/stores/: store.rs
