[package]
name = "simple-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.64"
wasm-bindgen = "0.2.87"
ybc = "*"
console_error_panic_hook = "0.1"
graphql_client ={ version = "0.13.0", features = ["reqwest"] }
yewdux = "0.9.3"
thiserror = "1.0.48"
reqwest = "0.11.18"
futures = "0.3.28"
serde_json = "1.0.107"


